@@ -1,3 +1,9 @@
+2011-07-01  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* gnus-draft.el (gnus-draft-clear-marks): Revert last change;
+	mark actually existing articles as unread rather than the ones that
+	active asserts.
+
 2011-07-01  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* nntp.el (nntp-record-command):
